<resources>
    <string name="app_name">Astronaut</string>
    <string name="title_activity_expedition">Expedition</string>
    <string name="Expidition">Исследование</string>
    <string name="vostochniy">Восточный</string>
    <string name="jiuquan">Цзюцюа́нь</string>
    <string name="baikonur">Байконур</string>
    <string name="lunokhod">Лунoход-1 V2</string>
    <string name="lunoTime">10.11 1970 7:44</string>
    <string name="lunokhod2">Луноход-2 V2</string>
    <string name="lunoTime2">16.01 1973 3:10</string>
    <string name="back">назад</string>
    <string name="planet">К планетам</string>
    <string name="speed">Скорость</string>
    <string name="country">Россия</string>
    <string name="add">+ Добавить новый</string>
    <string name="temp">Температура</string>
    <string name="now">Температура</string>
    <string name="russia">Russia</string>
    <string name="_30">30мбар</string>
    <string name="_30_">30</string>
    <string name="barometr">Барометр</string>
    <string name="gravitation">Гравитация</string>
    <string name="_154_0">154.0</string>
    <string name="_354_0">354.0</string>
    <string name="_254_0">254.0</string>
    <string name="light">Освещенность</string>
    <string name="_126">126лк</string>
    <string name="_30h">30км/ч</string>
    <string name="magnet">Магнитометр</string>
    <string name="_54_0">54.0</string>
    <string name="speeddd">Спидометр</string>

</resources>