<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/spacebackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/change"
            style="@style/Button.white"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"

            android:layout_width="169dp"
            android:layout_height="match_parent"
            android:background="@drawable/button"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/roboto_black"
            android:text="@string/Expidition"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <GridLayout
            android:layout_width="400dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="15dp"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            android:rowCount="2">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:cardCornerRadius="25dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/specialbutton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/lunase2"
                        tools:ignore="ContentDescription">
                    </ImageButton>

<!--                    <pl.droidsonroids.gif.GifImageView-->
<!--                        android:id="@+id/gif"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="264dp"-->
<!--                        app:cardCornerRadius="25dp"-->
<!--                        android:src="@drawable/moongif">-->

<!--                    </pl.droidsonroids.gif.GifImageView>-->
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </GridLayout>

        <GridLayout
            android:layout_width="411dp"
            android:layout_height="398dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            android:rowCount="4">


            <androidx.cardview.widget.CardView
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_margin="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                app:cardCornerRadius="25dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/lll2">
                    </ImageButton>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="175dp"
                android:layout_height="370dp"
                android:layout_margin="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                app:cardCornerRadius="25dp"
                app:cardElevation="5dp">

        <com.google.android.material.slider.Slider
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:rotation="270"
            android:value="300"
            android:valueFrom="0"
            android:valueTo="1000"
            app:thumbColor="#FFEB3B"
            app:trackColorActive="#6F51FF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed"
            android:textColor="@color/black"
            android:textSize="27sp"
            android:layout_gravity="bottom"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="50dp"
            android:layout_alignParentBottom="true">

        </TextView>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_margin="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="-190dp"
                android:layout_marginRight="15dp"
                app:cardCornerRadius="25dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn5"
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:background="@drawable/move"
                        tools:ignore="ContentDescription">

                    </ImageButton>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </GridLayout>


        <GridLayout
            android:layout_width="406dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="-10dp"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            android:rowCount="4">


            <androidx.cardview.widget.CardView
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_margin="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:cardCornerRadius="25dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textspeed"
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"
                        android:text="@string/speeddd"
                        android:textColor="@color/black"
                        android:textSize="28sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/speed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"
                        android:text="@string/_30h"
                        android:textColor="#FFEB3B"
                        android:textSize="40sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_margin="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:cardCornerRadius="25dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/magnettitle"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"
                        android:text="@string/magnet"
                        android:textColor="#9986F0"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/magnittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"
                        android:text="@string/_54_0"
                        android:textColor="#000000"
                        android:textSize="40sp" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_margin="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:cardCornerRadius="25dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/lighttle"
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"

                        android:text="@string/light"
                        android:textColor="#000000"
                        android:textSize="23sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/lighttext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"
                        android:text="@string/_126"
                        android:textColor="#9986F0"
                        android:textSize="40sp" />

                    <View
                        android:id="@+id/light"
                        android:layout_width="match_parent"
                        android:layout_height="85dp"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"
                        android:textColor="#9986F0"
                        android:textSize="40sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_margin="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:cardCornerRadius="25dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/gravity"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"

                        android:text="@string/gravitation"
                        android:textColor="#FFEB3B"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/gravityX"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"
                        android:text="@string/_154_0"
                        android:textColor="#000000"
                        android:textSize="19sp" />

                    <TextView
                        android:id="@+id/gravityY"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"
                        android:text="@string/_254_0"
                        android:textColor="#000000"
                        android:textSize="19sp" />

                    <TextView
                        android:id="@+id/gravityZ"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"
                        android:text="@string/_354_0"
                        android:textColor="#000000"
                        android:textSize="19sp" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </GridLayout>

        <GridLayout
            android:layout_width="406dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="-10dp"
            android:columnCount="2"
            android:columnOrderPreserved="false">

        </GridLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="375dp"
            android:layout_height="380dp"
            android:layout_margin="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            app:cardCornerRadius="25dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="389dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/compass"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:background="@drawable/nsew"
                    android:gravity="center"
                    tools:ignore="ContentDescription" />




            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

</ScrollView>

